Fix the spacing of the code snippet examples
The responsive spacing should be applied to the element opposed
to using utility classes to add spacing to the typography around
the element.

--- a/app/styles/design-example/_code-embed.scss
+++ b/app/styles/design-example/_code-embed.scss
@@ -1,7 +1,6 @@
 .code-embed {
   background-color: $color_nhsuk-grey-5;
   border: 1px solid $color_nhsuk-grey-4;
-  margin-top: 48px;
 
   iframe {
     display: block;
